--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </span>
           <span class="more-element">
             <span class="content">
-              <span class="headline">Smoothie&nbsp;Delight</span>
+              <span class="headline">Smoothie Delight</span>
               <span class="excerpt">Extremely fresh. Shockingly blue. Full of forest flavor. Taste it first and surprise your friend!</span>
               <span class="link">
                 <div class="fill-blueberry"></div>
@@ -91,19 +91,19 @@
         <li class="slider-list-item">
           <span class="back-element">
             <img src="assets/img/back-kiwi.png" alt="little kiwi fruits" />
-          </span>
           <span class="main-element">
-            <img src="assets/img/bottle-kiwi.png" alt="kiwi smooothie bottle" />
+            <img src="assets/img/bottle-kiwi.png" alt="kiwi smoothie bottle" />
           </span>
           <span class="front-element">
             <img src="assets/img/front-kiwi.png" alt="large kiwi fruits" />
+          </span>
           <span class="title-element">
             <span class="title">kiwi</span>
           </span>
           <span class="more-element">
             <span class="content">
-              <span class="headline">Smoothie&nbsp;Delight</span>
-              <span class="excerpt">Green power is waiting for&nbsp;you. Time for slimming your body with our the most nutritious smoothie!</span>
+              <span class="headline">Smoothie Delight</span>
+              <span class="excerpt">Green power is waiting for you. Time for slimming your body with our the most nutritious smoothie!</span>
               <span class="link">
                 <div class="fill-kiwi"></div>
                 <a href="#">Open catalog</a>
@@ -111,6 +111,7 @@
             </span>
           </span>
         </li>
+
 
         <li class="slider-list-item">
           <span class="back-element">
@@ -126,8 +127,8 @@
           </span>
           <span class="more-element">
             <span class="content">
-              <span class="headline">Smoothie&nbsp;Delight</span>
-              <span class="excerpt">Time for a little energy boost?&nbsp;Choose&nbsp;our&nbsp;sweet mango smoothie. Coffee won't be needed!</span>
+              <span class="headline">Smoothie Delight</span>
+              <span class="excerpt">Time for a little energy boost? Choose our sweet mango smoothie. Coffee won't be needed!</span>
               <span class="link">
                 <div class="fill-mango"></div>
                 <a href="#">Open catalog</a>
