--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Discover a range of Smoothie combinations crafted with master precise to help you achive fit body and healthy life." />
+  <meta name="description" content="Discover a range of Smoothie combinations crafted with master precise to help you achive fit body and healthy life.">
 
   <!--Bootstrap CSS-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -65,13 +65,13 @@
       <ul class="slider-list">
         <li class="slider-list-item">
           <span class="back-element">
-            <img src="assets/img/back-blueberry.png" alt="little blueberries" />
+            <img src="assets/img/back-blueberry.png" alt="little blueberries">
           </span>
           <span class="main-element">
-            <img src="assets/img/bottle-blueberry.png" alt="blueberry smooothie bottle"/>
+            <img src="assets/img/bottle-blueberry.png" alt="blueberry smooothie bottle">
           </span>
           <span class="front-element">
-            <img src="assets/img/front-blueberry.png" alt="large blueberries"  />
+            <img src="assets/img/front-blueberry.png" alt="large blueberries">
           </span>
           <span class="title-element">
             <span class="title">blueberry</span>
@@ -90,12 +90,12 @@
 
         <li class="slider-list-item">
           <span class="back-element">
-            <img src="assets/img/back-kiwi.png" alt="little kiwi fruits" />
+            <img src="assets/img/back-kiwi.png" alt="little kiwi fruits">
           <span class="main-element">
-            <img src="assets/img/bottle-kiwi.png" alt="kiwi smoothie bottle" />
+            <img src="assets/img/bottle-kiwi.png" alt="kiwi smoothie bottle">
           </span>
           <span class="front-element">
-            <img src="assets/img/front-kiwi.png" alt="large kiwi fruits" />
+            <img src="assets/img/front-kiwi.png" alt="large kiwi fruits">
           </span>
           <span class="title-element">
             <span class="title">kiwi</span>
@@ -115,12 +115,12 @@
 
         <li class="slider-list-item">
           <span class="back-element">
-            <img src="assets/img/back-mango.png" alt="little mango fruits" />
+            <img src="assets/img/back-mango.png" alt="little mango fruits">
           <span class="main-element">
-            <img src="assets/img/bottle-mango.png" alt="mango smoothie bottle" />
+            <img src="assets/img/bottle-mango.png" alt="mango smoothie bottle">
           </span>
           <span class="front-element">
-            <img src="assets/img/front-mango.png" alt="large mango fruits" />
+            <img src="assets/img/front-mango.png" alt="large mango fruits">
           </span>
           <span class="title-element">
             <span class="title">mango</span>
@@ -212,8 +212,8 @@
                       <form id="myform" method="post">
                           <div class="form-row d-flex justify-content-center">
                               <div class="col-7 text-btn">
-                                  <input type="email" name="guest_mail" class="form-control mb-2" id="inlineFormInputMail" title="format: xxx@xxx.xxx)" placeholder="Email Address" required/>
-                                  <input type="text" name="from_name" class="form-control mb-2" id="inlineFormInputName" title="format: xxxxxx)" placeholder="Name" required/>
+                                  <input type="email" name="guest_mail" class="form-control mb-2" id="inlineFormInputMail" title="format: xyz@example.xx)" placeholder="Email Address" required>
+                                  <input pattern="[A-Za-z]*"type="text" name="from_name" class="form-control mb-2" id="inlineFormInputName" title="format: John)" placeholder="Name" required>
                               </div>
                               <button class="btn col-7 color mb-2 mt-4">Stay alert</button>
                           </div>
