--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <span class="more-element">
             <span class="content">
               <span class="headline">Smoothie Delight</span>
-              <span class="excerpt">Extremely fresh. Shockingly blue. Full of forest flavor. Taste it first and surprise your friend!</span>
+              <span class="excerpt berry">Extremely fresh. Shockingly blue. Full of forest flavor. Taste it first and surprise your friend!</span>
               <span class="link">
                 <div class="fill-blueberry"></div>
                 <a href="#">Open catalog</a>
@@ -103,7 +103,7 @@
           <span class="more-element">
             <span class="content">
               <span class="headline">Smoothie Delight</span>
-              <span class="excerpt">Green power is waiting for you. Time for slimming your body with our the most nutritious smoothie!</span>
+              <span class="excerpt kiwi">Green power is waiting for you. Time for slimming your body with our the most nutritious smoothie!</span>
               <span class="link">
                 <div class="fill-kiwi"></div>
                 <a href="#">Open catalog</a>
@@ -128,7 +128,7 @@
           <span class="more-element">
             <span class="content">
               <span class="headline">Smoothie Delight</span>
-              <span class="excerpt">Time for a little energy boost? Choose our sweet mango smoothie. Coffee won't be needed!</span>
+              <span class="excerpt mango">Time for a little energy boost? Choose our sweet mango smoothie. Coffee won't be needed!</span>
               <span class="link">
                 <div class="fill-mango"></div>
                 <a href="#">Open catalog</a>
