--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
                       <form id="myform" method="post">
                           <div class="form-row d-flex justify-content-center">
                               <div class="col-7 text-btn">
-                                  <input type="email" name="guest_mail" class="form-control mb-2" id="inlineFormInputMail" title="format: xyz@example.xx)" placeholder="Email Address" required>
-                                  <input pattern="[A-Za-z]*"type="text" name="from_name" class="form-control mb-2" id="inlineFormInputName" title="format: John)" placeholder="Name" required>
+                                <input pattern="^[\w]{1,}[\w.+-]{0,}@[\w-]{2,}([.][a-zA-Z]{2,}|[.][\w-]{2,}[.][a-zA-Z]{2,})$" type="email" name="guest_mail" class="form-control mb-2" id="inlineFormInputMail" placeholder="Email Address" required>
+                                <input pattern="[A-Za-z]*" type="text" name="from_name" class="form-control mb-2" id="inlineFormInputName" title="(for example: John)" placeholder="Name" required>
                               </div>
                               <button class="btn col-7 color mb-2 mt-4">Stay alert</button>
                           </div>
